# RoboScrub_Build

./: README.md  cinderella_build.bash  email.bash  move_deb.bash  release_note.sh
.github/workflows/: HF0.1-email.yml  HF0.1.yml  HF1.0-email.yml  HF1.0.yml  HF1.0_auto_test.yml  HF1.0_memory.yml  HF1.1.yml  HF1.1_indoor.yml  HF2.0.yml  email.yml  main.yml
auto_build_bash/: cinderella_build.bash  email.bash  move_deb.bash  release_note.sh
auto_test_bash/: copy_deb.bash  deb_install.bash  main.py  mission_start.bash  roborock_base-start  sensor_monitor.yaml  write_email.bash
file_monitor_to_remove/: file_monitor_to_remove.sh
sim/scrubber_gazebo/: CMakeLists.txt  default.rviz
sim/scrubber_gazebo/launch/: factory_world.launch  parking_world.launch  scrubber_testworld.launch  scrubber_world.launch
sim/scrubber_gazebo/models/car_parking_underground_big_1/: model.config  model.sdf
sim/scrubber_gazebo/src/: dynamicObject.cpp
sim/scrubber_gazebo/worlds/: BG1  dynamic_world.world  parking_big_2.world  parking_big_3.world  runin.world  testmap.world
sim/scrubber_model/: CMakeLists.txt  package.xml
sim/scrubber_model/launch/: scrubber_model.launch
sim/scrubber_model/urdf/: scrubber_model.gazebo.xacro  scrubber_model.urdf.xacro  scrubber_tof_model_plugin.xacro  sim2_scrubber_model.urdf.xacro  sim_scrubber_model.urdf.xacro  sim_scrubber_model.urdf.xacro.bak
sim/world_controller/: CMakeLists.txt  package.xml
sim/world_controller/include/: collision_recorder.h
sim/world_controller/scripts/: obstacle_bot_controller.py
sim/world_controller/src/: collision_recorder.cpp
